<?xml version="1.0" encoding="utf-8"?>
<!--TODO (2 points): Convert to ConstraintLayout (COMPLETED)-->
<!--TODO (1 point): Address Android Studio warnings (COMPLETED)-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_random_user"
        android:textAppearance="?textAppearanceHeadline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#FFFBFE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/main_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/space_small"
        android:paddingEnd="@dimen/space_small"
        android:text="@string/name"
        android:textAppearance="?textAppearanceBody2"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/main_image"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <TextView
        android:id="@+id/main_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintStart_toEndOf="@+id/main_name_label"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        tools:text="Jon" />

    <TextView
        android:id="@+id/main_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/space_small"
        android:paddingEnd="@dimen/space_small"
        android:text="@string/email"
        android:textAppearance="?textAppearanceBody2"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/main_image"
        app:layout_constraintTop_toBottomOf="@+id/main_name_label" />

    <TextView
        android:id="@+id/main_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintStart_toEndOf="@+id/main_email_label"
        app:layout_constraintTop_toBottomOf="@+id/main_name_label"
        tools:text="robert@test.com" />

    <Button
        android:id="@+id/main_refresh_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/refresh_random_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_image"
        app:layout_constraintTop_toBottomOf="@+id/main_email" />

    <Button
        android:id="@+id/main_see_details_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/view_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_image"
        app:layout_constraintTop_toBottomOf="@+id/main_refresh_button" />

    <View
        android:id="@+id/second_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:background="#11111111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_see_details_button" />

    <Button
        android:id="@+id/main_user_list_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/show_10_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_divider" />

    <View
        android:id="@+id/third_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:background="#11111111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_user_list_button" />


    <!--  TODO (5 points): Convert to RecyclerView -> (COMPLETED)-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_user_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_default="wrap"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/open_compose_activity"
        android:visibility="gone"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/open_compose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_user_list_button"
        app:layout_constraintTop_toBottomOf="@+id/second_divider" />


</androidx.constraintlayout.widget.ConstraintLayout>

